--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -1,25 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Dealership Review</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    />
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <link href="https://unpkg.com/bootstrap-table@1.18.2/dist/bootstrap-table.min.css" rel="stylesheet">
+    <link
+      href="https://unpkg.com/bootstrap-table@1.18.2/dist/bootstrap-table.min.css"
+      rel="stylesheet"
+    />
     <script src="https://unpkg.com/bootstrap-table@1.18.2/dist/bootstrap-table.min.js"></script>
     <script src="https://unpkg.com/bootstrap-table@1.18.2/dist/extensions/filter-control/bootstrap-table-filter-control.min.js"></script>
+  </head>
 
-</head>
-
-    <body>
-    <!-- Remove this line the first time you edit this file -->
-     This is the index page of your Django app!
+  <body>
     <!--Add a nav bar here -->
-
+    <nav class="navbar navbar-light bg-light">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">Dealership Review</a>
+        </div>
+        <ul class="nav navbar-nav navbar-right list-group-horizontal">
+          <li>
+            <a class="btn btn-link" href="{% url 'djangoapp:about' %}">About</a>
+            <a class="btn btn-link" href="{% url 'djangoapp:contact' %}"
+              >Contact</a
+            >
+          </li>
+          {% if user.is_authenticated %}
+          <li>
+            <a class="btn btn-link" href="#"
+              >{{ user.first_name }}({{ user.username }})</a
+            >
+            <a class="btn btn-link" href="{% url 'djangoapp:logout' %}"
+              >Logout</a
+            >
+          </li>
+          {% else %}
+          <li>
+            <form
+              class="form-inline"
+              action="{% url 'djangoapp:login' %}"
+              method="post"
+            >
+              {% csrf_token %}
+              <div class="input-group">
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="Username"
+                  name="username"
+                />
+                <input
+                  type="password"
+                  class="form-control"
+                  placeholder="Password"
+                  name="psw"
+                />
+                <button class="btn btn-primary" type="submit">Login</button>
+                <a
+                  class="btn btn-link"
+                  href="{% url 'djangoapp:registration' %}"
+                  >Sign Up</a
+                >
+              </div>
+            </form>
+          </li>
+          {% endif %}
+        </ul>
+      </div>
+    </nav>
     <!--Add a dealer table here -->
-
-    </body>
-
+    <table class="table" id="table" data-filter-control="true">
+      <thead>
+        <tr>
+          <th data-field="id">ID</th>
+          <th data-field="name">Dealer Name</th>
+          <th data-field="city">City</th>
+          <th data-field="addresss">Address</th>
+          <th data-field="zip">Zip</th>
+          <th data-field="state" data-filter-control="select">State</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for dealer in dealership_list %}
+        <tr>
+          <td>{{dealer.id}}</td>
+          <td>
+            <a href="{% url 'djangoapp:dealer_details' dealer.id %}"
+              >{{dealer.full_name}}</a
+            >
+          </td>
+          <td>{{dealer.city}}</td>
+          <td>{{dealer.address}}</td>
+          <td>{{dealer.zip}}</td>
+          <td>{{dealer.st}}</td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  </body>
+  <!-- turn-on filter control for the table -->
+  <script>
+    $(function () {
+      $("#table").bootstrapTable();
+    });
+  </script>
 </html>
