--- a/server/djangoapp/templates/djangoapp/about.html
+++ b/server/djangoapp/templates/djangoapp/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>About Us</title>
 </head>
-
+<!-- Description -->
     <body>
         <h1>
             Welcome to Best Cars dealership, home to the best cars in UAE. We sell petrol and electric cars!
